--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@ header{
 }
 
 .conhecimentos{
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(6, 6rem);
@@ -266,6 +267,7 @@ header{
 
 .sessao-conhecimentos{
     background-color: #f5f5f5;
+    height: 100%;
 }
 
 .sessao-header{
@@ -307,11 +309,12 @@ header{
     grid-column: 7 / 11;
     grid-row: 2 / 6;
     width: 100%;
+    height: 100%;
 }
 
 .conhecimentos-img-wrapper img{
     object-fit: cover;
-    width: 100%;
+    height: 100%;
 }
 
 
