--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
   --font-action: "Muli", serif;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 .hamburguer {
   /* background-color: red; */
   width: 2rem;
@@ -173,6 +177,7 @@ header {
   top: 0;
   right: -20rem;
   transition: all 1s;
+  z-index: 80;
 }
 
 .show-menu .sidebar {
@@ -569,3 +574,52 @@ header {
   cursor: pointer;
   grid-column: 2;
 }
+
+footer{
+  width: 100%;
+  height: 7rem;
+  background-color: #17181b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-content{
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-content p{
+  font-family: var(--font-secundary);
+  color: #a7a7a7;
+  font-size: 1.2rem;
+}
+
+.social-list a{
+  margin: 0 2rem;
+  color: #a7a7a7;
+  font-size: 1.3rem;
+}
+
+.social-list ul {
+  display: flex;
+}
+
+#link-topo{
+  position: fixed;
+  right: 3rem;
+  bottom: 3rem;
+  width: 3rem;
+  height: 3rem;
+  background: #6a3093;
+  background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+  background: linear-gradient(to left, #a044ff, #6a3093);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  border-radius: .3rem;
+  box-shadow:  0 0.1rem 0.6rem #00000009;
+}
+
